apps/media-stack/bazarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
  namespace: media
spec:
  parentRefs:
    - kind: Gateway
      name: cilium
      namespace: gateway
      sectionName: https
  hostnames:
    - "bazarr.${DOMAIN}"
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - name: bazarr
          port: 6767
